# TypeFlowApp

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: keyboard.rs  main.rs  platform.rs  shortcuts.rs  tray.rs  windows.rs
src/components/card/: Card.tsx  CardLine.tsx  Cursor.tsx
src/components/onboarding/: Onboarding.tsx
src/components/viewer/: DrillDown.tsx  SessionList.tsx  Viewer.tsx
src/hooks/: useGhostInput.ts
src/lib/: pdf.ts  ruler.ts  sound.ts  storage.ts  utils.ts
src/store/: useCardStore.ts  useViewerStore.ts
src/styles/: globals.css
src/types/: index.ts
src/windows/card/: index.html  main.tsx
src/windows/onboarding/: main.tsx
src/windows/viewer/: index.html  main.tsx
