[package]
name = "typeflow"
version = "1.0.0"
description = "TypeFlow — floating note overlay"
authors = ["TypeFlow"]
edition = "2021"

[lib]
name = "typeflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "typeflow"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-global-shortcut = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
raw-window-handle = "0.6"



[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
